Make Board model, boards/show view, boards collection, boards router.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,6 +12,9 @@
  *= require jquery-ui
  *= require_tree .
  */
-
+@import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+form {
+  margin-left: 10px;
+}
