Make show board display ul of its lists

--- a/app/assets/templates/boards/show.jst.ejs
+++ b/app/assets/templates/boards/show.jst.ejs
@@ -1,1 +1,9 @@
 <h1><%= board.escape("title") %></h1>
+<ul class="lists">
+  <% _.each(board.get("lists"), function (list) { %>
+    <li><%= _.escape(list.title) %></li>
+  <% }); %>
+</ul>
+
+<% window.board = board %>
+<%= board.lists %>
