--- a/app/assets/templates/boards/show.jst.ejs
+++ b/app/assets/templates/boards/show.jst.ejs
@@ -1,7 +1,5 @@
 <h1><%= board.escape("title") %></h1>
+<a href="#/boards/<%= board.escape('id') %>/newlist">New List</a>
 <ul class="lists">
 
 </ul>
-
-<% window.board = board %>
-<%= board.escape("lists") %>
