--- a/app/assets/templates/lists/show.jst.ejs
+++ b/app/assets/templates/lists/show.jst.ejs
@@ -1,3 +1,9 @@
 <h3><%= list.escape("title") %></h3>
 <ul class="cards">
 </ul>
+<button class="show-new-card-form">Add a card</button>
+<form class="newcard hidden">
+  <label for="card-title">New Card Title: </label>
+  <input type="text" name="card[title]">
+  <button>Create Card</button>
+</form>
